--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,27 +1,5 @@
 <% include ./partials/header %>
-<div class="wrapper">
 
-    <!-- Main Header -->
-    <header class="main-header">
-
-        <!-- Logo -->
-        <a href="index2.html" class="logo">
-            <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><b>G</b>urus</span>
-            <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><b>GSM </b>Gurus</span>
-        </a>
-
-        <!-- Header Navbar -->
-        <nav class="navbar navbar-static-top" role="navigation">
-            <!-- Sidebar toggle button-->
-            <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-                <span class="sr-only">Toggle navigation</span>
-            </a>
-            <!-- Navbar Right Menu -->
-           
-        </nav>
-    </header>
     <!-- Left side column. contains the logo and sidebar -->
     <aside class="main-sidebar">
 
@@ -57,19 +35,68 @@
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
         <section class="content-header">
-            <h1>
-                Landing Page
-                <small>Optional description</small>
-            </h1>
+
         </section>
 
         <!-- Main content -->
         <section class="content">
 
-            <!-- Your Page Content Here -->
-            <span class="info-box-icon bg-aqua"><i class="fa fa-android" aria-hidden="true"></i></span>
+<!-- =============================================  Your Page Content Here  ============================================== -->
+        <div class="row">
+            <div class="col-md-12">
+                <div class="box">
+                      <h3 class="text-center">რომელი სმარტფონით სარგებლობთ?</h3>
+
+                    <div class="div-center">
+                         <a href="#"><span class="info-box-icon-os bg-green-gradient"><i class="fa fa-android" aria-hidden="true"></i></span></a>
+                         <a href="#"><span class="info-box-icon-os bg-black-gradient"><i class="fa fa-apple" aria-hidden="true"></i></span></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="box box-success">
+                        <div class="box-header with-border">
+                            <h3 class="box-title">სიახლეები</h3>
+                        </div>
+
+
+
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="box box-black">
+                        <div class="box-header with-border">
+                            <p class="box-title">ახალი ინსტრუქციები</p>
+                        </div>
+                        <div class="box-body">
+                            <ul class="products-list product-list-in-box">
+                                <% var x = 5 %>
+                                <% for(i = 0; i < x; i++){ %>
+                                <li class="item">
+                                    <div class="product-img">
+                                        <img src="/dist/static_images/default-50x50.gif">
+                                    </div>
+                                    <div class="product-info">
+                                        <a href="#" class="product-title">სამსუნგის ინსტრუქცია</a>
+                                        <span class="product-description">
+                                            თავად ტკივილი არავის უყვარს, არავინ ეძებს მას და არავის სურს იგი, უბრალოდ იმიტომ, რომ ის ტკივილია...
+                                        </span>
+                                    </div>
+                                </li>
+                                <% } %>
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
 
         </section>
+
         <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
