--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -36,3 +36,76 @@
 .box.box-black {
     border-top-color: #1f1c1c;;
 }
+
+#sidebar-icon{
+    font-size: 22px;
+}
+#sidebar-icon-news {
+    font-size: 14px;
+}
+
+.blog-image img {
+    width: 130px;
+    float: left;
+}
+.blog-description {
+    display: block;
+}
+
+.blog-info {
+    margin-left: 145px;
+}
+
+.blog-title {
+    font-weight: 900;
+    text-decoration: none;
+    font-size: 18px;
+}
+.greenBtn {
+    border-radius: 0;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    background-color: #00a65a;
+    border-color: #008d4c;
+    color: #fff;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    text-transform: none;
+    float: right;
+}
+.greenBtn:hover {
+    text-decoration: none;
+    background-color: #00be65;
+    color: #fff;
+}
+
+.app-img {
+    float: left;
+}
+.app-img img {
+    width: 30px;
+    height: 30px;
+}
+.app-title {
+    margin-left: 5px;
+}
+
+.app-item {
+    border-bottom: 1px dotted #959595;
+    box-shadow: none;
+    padding: 4px;
+}
