--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,28 +1,62 @@
 <% include ./partials/header %>
+<body class="hold-transition skin-purple sidebar-collapse sidebar-mini">
+<div class="wrapper">
+
+    <!-- Main Header -->
+    <header class="main-header">
+
+        <!-- Logo -->
+        <a href="/" class="logo">
+            <!-- mini logo for sidebar mini 50x50 pixels -->
+            <span class="logo-mini"><b>G</b>urus</span>
+            <!-- logo for regular state and mobile devices -->
+            <span class="logo-lg"><b>GSM </b>Gurus</span>
+        </a>
+
+        <!-- Header Navbar -->
+        <nav class="navbar navbar-static-top" role="navigation">
+            <!-- Sidebar toggle button-->
+            <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+                <span class="sr-only">Toggle navigation</span>
+            </a>
+            <!-- Navbar Right Menu -->
+
+        </nav>
+    </header>
 
     <!-- Left side column. contains the logo and sidebar -->
     <aside class="main-sidebar">
 
         <!-- sidebar: style can be found in sidebar.less -->
         <section class="sidebar">
-
-           
-
             <!-- Sidebar Menu -->
             <ul class="sidebar-menu">
                 <li class="header">Navigation Bar</li>
                 <!-- Optionally, you can add icons to the links -->
-                <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
-                <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
+                <li class="active"><a href="#"><i class="fa fa-mobile" id="sidebar-icon" aria-hidden="true"></i> <span>საწყისი გვერდი</span></a></li>
+                <li><a href="#"><i class="fa fa-newspaper-o" id="sidebar-icon-news" aria-hidden="true"></i><span>სიახლეები</span></a></li>
                 <li class="treeview">
-                    <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
+                    <a href="#"><i class="fa fa-android" id="sidebar-icon" aria-hidden="true"></i> <span>Android</span>
                         <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
+              <i class="fa fa-angle-left pull-right"></i></span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="#">Link in level 2</a></li>
-                        <li><a href="#">Link in level 2</a></li>
+                        <li><a href="#">ინსტრუქციები</a></li>
+                        <li><a href="#">აპლიკაციები</a></li>
+                        <li><a href="#">სიახლე სისტემაზე</a></li>
+                    </ul>
+                </li>
+
+
+                <li class="treeview">
+                    <a href="#"><i class="fa fa-apple" id="sidebar-icon" aria-hidden="true"></i> <span>iPhone</span>
+                        <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i></span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li><a href="#">ინსტრუქციები</a></li>
+                        <li><a href="#">აპლიკაციები</a></li>
+                        <li><a href="#">სიახლე სისტემაზე</a></li>
                     </ul>
                 </li>
             </ul>
@@ -42,34 +76,58 @@
         <section class="content">
 
 <!-- =============================================  Your Page Content Here  ============================================== -->
+
         <div class="row">
+            <!--main information -->
             <div class="col-md-12">
                 <div class="box">
-                      <h3 class="text-center">რომელი სმარტფონით სარგებლობთ?</h3>
-
+                      <h3 class="text-center">ისწავლე სმარტფონი ჩვენთან ერთად</h3>
                     <div class="div-center">
                          <a href="#"><span class="info-box-icon-os bg-green-gradient"><i class="fa fa-android" aria-hidden="true"></i></span></a>
                          <a href="#"><span class="info-box-icon-os bg-black-gradient"><i class="fa fa-apple" aria-hidden="true"></i></span></a>
                     </div>
                 </div>
             </div>
-        </div>
-            <div class="row">
+        </div> <!-- END main information -->
+
+     <!--All Feeds row-->
+    <div class="row">
+                <!--Blog feed-->
                 <div class="col-md-8">
                     <div class="box box-success">
                         <div class="box-header with-border">
                             <h3 class="box-title">სიახლეები</h3>
                         </div>
-
-
-
+                        <div class="box-body">
+                            <ul class="products-list product-list-in-box">
+                                <% var x = 5 %>
+                                <% for(i = 0; i < x; i++) { %>
+                                <li class="item">
+                                    <div class="blog-image">
+                                        <img src="./dist/static_images/placeholder.jpg" alt="">
+                                    </div>
+                                    <div class="blog-info">
+                                        <a href="#" class="blog-title">ახალი ამბავი</a>
+                                        <span class="blog-description">
+                                            Suspendisse sapien ante, auctor congue maximus vel, fermentum nec eros. Maecenas
+                                            at tellus non justo consequat suscipit. Nulla cursus est vel nibh vestibulum, rhoncus
+                                            Praesent maximus in velit ac congue. Morbi non dictum
+                                        </span>
+                                    </div>
+                                    <a href="#" class="greenBtn">მეტი</a>
+                                </li>
+                                <% } %>
+                            </ul>
+                        </div>
                     </div>
                 </div>
+                <!--END Blog Feed-->
 
+                <!--Sidebar-->
                 <div class="col-md-4">
                     <div class="box box-black">
                         <div class="box-header with-border">
-                            <p class="box-title">ახალი ინსტრუქციები</p>
+                            <p class="box-title">ახალი  დამატებული  ინსტრუქციები</p>
                         </div>
                         <div class="box-body">
                             <ul class="products-list product-list-in-box">
@@ -91,9 +149,32 @@
                         </div>
 
                     </div>
-                </div>
+                    <div class="box box-black">
+                        <div class="box-header with-border">
+                            <p class="box-title">TOP 10 Apps</p>
+                        </div>
+                        <div class="box-body">
+                            <ul class="products-list product-list-in-box">
+                                <% var x = 10 %>
+                                <% for(i = 0; i < x; i++){ %>
+                                <li class="item">
+                                    <div class="app-img">
+                                        <img src="/dist/static_images/default-50x50.gif">
+                                    </div>
+                                    <div>
+                                        <a href="#" class="app-title">Viber 6.6.0.888 (120251)</a>
+                                    </div>
+                                </li>
+                                <% } %>
+                            </ul>
+                        </div>
 
-            </div>
+                    </div>
+
+                </div>
+                <!--Sidebar-->
+    </div>
+            <!--END All Feeds row-->
 
         </section>
 
