--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -11,7 +11,7 @@
   
     <!-- Add the sidebar's background. This div must be placed
          immediately after the control sidebar -->
-   
+</div>
 </div>
 <!-- ./wrapper -->
 
@@ -23,6 +23,8 @@
 <script src="../bootstrap/js/bootstrap.min.js"></script>
 <!-- AdminLTE App -->
 <script src="../dist/js/app.min.js"></script>
+<!--My Javascript-->
+<script src="../js/main.js"></script>
 
 <!-- Optionally, you can add Slimscroll and FastClick plugins.
      Both of these plugins are recommended to enhance the
