--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -81,7 +81,7 @@
             <!--main information -->
             <div class="col-md-12">
                 <div class="box">
-                      <h3 class="text-center">ისწავლე სმარტფონი ჩვენთან ერთად</h3>
+                      <h3 class="text-center">ისწავლე სმარტფონი ჩვენთან ერთად <br><span id="loadLater">ვიდეო </span><span id="showLater2">ინსტრუქციებით</span> </h3>
                     <div class="div-center">
                          <a href="#"><span class="info-box-icon-os bg-green-gradient"><i class="fa fa-android" aria-hidden="true"></i></span></a>
                          <a href="#"><span class="info-box-icon-os bg-black-gradient"><i class="fa fa-apple" aria-hidden="true"></i></span></a>
@@ -151,22 +151,26 @@
                     </div>
                     <div class="box box-black">
                         <div class="box-header with-border">
-                            <p class="box-title">TOP 10 Apps</p>
+                            <p class="box-title">TOP 5 Apps</p>
                         </div>
                         <div class="box-body">
                             <ul class="products-list product-list-in-box">
-                                <% var x = 10 %>
+                                <% var x = 5 %>
                                 <% for(i = 0; i < x; i++){ %>
                                 <li class="item">
                                     <div class="app-img">
                                         <img src="/dist/static_images/default-50x50.gif">
                                     </div>
-                                    <div>
-                                        <a href="#" class="app-title">Viber 6.6.0.888 (120251)</a>
+                                    <div class="app-title">
+                                        <a href="#">Viber 6.6.0.888 (120251)</a>
+                                        <small class="app-date">Date: <em>01.03.2017</em></small>
                                     </div>
                                 </li>
                                 <% } %>
                             </ul>
+                        </div>
+                        <div class="box-footer text-center">
+                            <a href="#">ყველა</a>
                         </div>
 
                     </div>
