--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,6 +4,14 @@
     height: 175px;
 }
 
+#loadLater {
+    display: none;
+    color: #b40000;
+}
+#showLater2 {
+    display: none;
+}
+
 
 .info-box-icon-os {
     border-top-left-radius: 2px;
@@ -101,11 +109,15 @@
     height: 30px;
 }
 .app-title {
-    margin-left: 5px;
+    margin-left: 35px;
+    margin-top: -4px;
 }
 
 .app-item {
     border-bottom: 1px dotted #959595;
     box-shadow: none;
     padding: 4px;
+}
+.app-date {
+    display: block;
 }
