--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -33,7 +33,7 @@
             <ul class="sidebar-menu">
                 <li class="header">Navigation Bar</li>
                 <!-- Optionally, you can add icons to the links -->
-                <li class="active"><a href="#"><i class="fa fa-mobile" id="sidebar-icon" aria-hidden="true"></i> <span>საწყისი გვერდი</span></a></li>
+                <li class="active"><a href="#"><i class="fa fa-home" id="sidebar-icon" aria-hidden="true"></i> <span>საწყისი გვერდი</span></a></li>
                 <li><a href="#"><i class="fa fa-newspaper-o" id="sidebar-icon-news" aria-hidden="true"></i><span>სიახლეები</span></a></li>
                 <li class="treeview">
                     <a href="#"><i class="fa fa-android" id="sidebar-icon" aria-hidden="true"></i> <span>Android</span>
@@ -89,6 +89,28 @@
                 </div>
             </div>
         </div> <!-- END main information -->
+
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="box box-danger">
+                       <div class="box-header with-border">
+                           <h3 class="box-title">რაც აუცილებლად უნდა ვიცოდეთ</h3>
+                           <div class="box-tools pull-right">
+                               <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                           </div>
+                       </div>
+                        <div class="box-body">
+                           <a href="#">გუგლის ღრუბელი - Google Cloud</a><br>
+                           <a href="#">iCloud</a><br>
+                           <a href="#">როგორ დავაყენოთ აპლიკაციები</a><br>
+                           <a href="#">როგორ ბლაბლაბლა</a><br>
+                           <a href="#">როგორ ბლაბლაბლა</a><br>
+                           <a href="#">როგორ ბლაბლაბლა</a><br>
+                           <a href="#">როგორ ბლაბლაბლა</a><br>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
      <!--All Feeds row-->
     <div class="row">
