--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -83,34 +83,28 @@
                 <div class="box">
                       <h3 class="text-center">ისწავლე სმარტფონი ჩვენთან ერთად <br><span id="loadLater">ვიდეო </span><span id="showLater2">ინსტრუქციებით</span> </h3>
                     <div class="div-center">
-                         <a href="#"><span class="info-box-icon-os bg-green-gradient"><i class="fa fa-android" aria-hidden="true"></i></span></a>
-                         <a href="#"><span class="info-box-icon-os bg-black-gradient"><i class="fa fa-apple" aria-hidden="true"></i></span></a>
+                        <div class="inline-block">
+                            <p class="text-center">აუცილებლად ვიცოდეთ</p>
+                             <a href="#"><span class="info-box-icon-os bg-red-gradient"><i class="fa fa-android" aria-hidden="true"></i></span></a>
+                         </div>
+                         <div class="inline-block">
+                             <p class="text-center">ყველაფერი ანდროიდზე</p>
+                             <a href="#"><span class="info-box-icon-os bg-green-gradient"><i class="fa fa-android" aria-hidden="true"></i></span></a>
+                         </div>
+                         <div class="inline-block">
+                             <p class="text-center">ყველაფერი აიფოუნზე</p>
+                             <a href="#"><span class="info-box-icon-os bg-black-gradient"><i class="fa fa-apple" aria-hidden="true"></i></span></a>
+                         </div>
+                         <div class="inline-block">
+                             <p class="text-center">აპების მიმოხილვა</p>
+                             <a href="#"><span class="info-box-icon-os bg-yellow-gradient"><i class="fa fa-apple" aria-hidden="true"></i></span></a>
+                         </div>
                     </div>
                 </div>
             </div>
         </div> <!-- END main information -->
 
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="box box-danger">
-                       <div class="box-header with-border">
-                           <h3 class="box-title">რაც აუცილებლად უნდა ვიცოდეთ</h3>
-                           <div class="box-tools pull-right">
-                               <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                           </div>
-                       </div>
-                        <div class="box-body">
-                           <a href="#">გუგლის ღრუბელი - Google Cloud</a><br>
-                           <a href="#">iCloud</a><br>
-                           <a href="#">როგორ დავაყენოთ აპლიკაციები</a><br>
-                           <a href="#">როგორ ბლაბლაბლა</a><br>
-                           <a href="#">როგორ ბლაბლაბლა</a><br>
-                           <a href="#">როგორ ბლაბლაბლა</a><br>
-                           <a href="#">როგორ ბლაბლაბლა</a><br>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
 
      <!--All Feeds row-->
     <div class="row">
@@ -149,7 +143,7 @@
                 <div class="col-md-4">
                     <div class="box box-black">
                         <div class="box-header with-border">
-                            <p class="box-title">ახალი  დამატებული  ინსტრუქციები</p>
+                            <p class="box-title">აუცილებლად უნდა ვიცოდეთ<p>
                         </div>
                         <div class="box-body">
                             <ul class="products-list product-list-in-box">
@@ -160,7 +154,7 @@
                                         <img src="/dist/static_images/default-50x50.gif">
                                     </div>
                                     <div class="product-info">
-                                        <a href="#" class="product-title">სამსუნგის ინსტრუქცია</a>
+                                        <a href="#" class="product-title">დავრეგისტრირდეთ Play Market-ზე</a>
                                         <span class="product-description">
                                             თავად ტკივილი არავის უყვარს, არავინ ეძებს მას და არავის სურს იგი, უბრალოდ იმიტომ, რომ ის ტკივილია...
                                         </span>
