--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,15 +1,30 @@
 .div-center {
     margin: 0 auto;
-    width: 330px;
-    height: 175px;
+    width: 680px;
+    height: 180px;
 }
-
+.inline-block {
+    display: inline-block;
+    line-height: 3px;
+    margin-left: 7px;
+    background-color: black;
+    color: white;
+}
 #loadLater {
     display: none;
     color: #b40000;
 }
 #showLater2 {
     display: none;
+}
+
+.must-know-container {
+    width: 150px;
+    height: 170px;
+    border: solid 1px black;
+    display: inline-block;
+    margin-bottom: 10px;
+    margin-left: 15px;
 }
 
 
