--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,15 +1,23 @@
 .div-center {
     margin: 0 auto;
-    width: 680px;
+    width: 726px;
     height: 180px;
 }
+
+.info-box-last {
+
+}
+
 .inline-block {
     display: inline-block;
     line-height: 3px;
     margin-left: 7px;
-    background-color: black;
-    color: white;
+    font-weight: 600;
 }
+.main-info-header {
+    margin-bottom: 40px;
+}
+
 #loadLater {
     display: none;
     color: #b40000;
@@ -29,10 +37,7 @@
 
 
 .info-box-icon-os {
-    border-top-left-radius: 2px;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 2px;
+    border-radius: 6px;
     display: inline-block;
     height: 150px;
     width: 150px;
@@ -43,9 +48,26 @@
     margin-left: 10px;
 }
 
+.info-box-icon-os-edges {
+    border-radius: 6px;
+    display: inline-block;
+    height: 130px;
+    width: 130px;
+    text-align: center;
+    font-size: 60px;
+    line-height: 129px;
+    background: rgba(0, 0, 0, 0.2);
+    margin-left: 10px;
+}
+
 .info-box-icon-os:hover{
     transition:font-size 0.3s;
     font-size: 95px;
+}
+
+.info-box-icon-os-edges:hover{
+    transition:font-size 0.3s;
+    font-size: 70px;
 }
 
 .colom-color {
