--- a/views/android/android.ejs
+++ b/views/android/android.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/header %>
+<% include ../partials/header %>
 <body class="hold-transition skin-purple sidebar-collapse sidebar-mini">
 <div class="wrapper">
 
@@ -75,42 +75,42 @@
         <!-- Main content -->
         <section class="content">
 
-<!-- =============================================  Your Page Content Here  ============================================== -->
+            <!-- =============================================  Your Page Content Here  ============================================== -->
 
-        <div class="row">
-            <!--main information -->
-            <div class="col-md-12">
-                <div class="box">
-                      <h3 class="text-center main-info-header">ისწავლე სმარტფონი ჩვენთან ერთად <br><span id="loadLater">ვიდეო </span><span id="showLater2">ინსტრუქციებით</span> </h3>
-                    <div class="div-center">
-                        <div class="inline-block">
-                            <p class="text-center">აუცილებელი ინფო</p>
-                             <a href="#"><span class="info-box-icon-os-edges bg-red-gradient"><i class="fa fa-exclamation" aria-hidden="true"></i></span></a>
-                         </div>
-                         <div class="inline-block">
-                             <p class="text-center">ყველაფერი ანდროიდზე</p>
-                             <a href="/smartphones/android"><span class="info-box-icon-os bg-green-gradient"><i class="fa fa-android" aria-hidden="true"></i></span></a>
-                         </div>
-                         <div class="inline-block">
-                             <p class="text-center">ყველაფერი აიფოუნზე</p>
-                             <a href="#"><span class="info-box-icon-os bg-black-gradient"><i class="fa fa-apple" aria-hidden="true"></i></span></a>
-                         </div>
-                         <div class="inline-block info-box-last">
-                             <p class="text-center">აპების მიმოხილვა</p>
-                             <a href="#"><span class="info-box-icon-os-edges bg-yellow-gradient"><i class="fa fa-gamepad" aria-hidden="true"></i></span></a>
+            <div class="row">
+                <!--main information -->
+                <div class="col-md-12">
+                    <div class="box">
+                        <h3 class="text-center main-info-header">ისწავლე სმარტფონი ჩვენთან ერთად <br><span id="loadLater">ვიდეო </span><span id="showLater2">ინსტრუქციებით</span> </h3>
+                        <div class="div-center">
+                            <div class="inline-block">
+                                <p class="text-center">აუცილებელი ინფო</p>
+                                <a href="#"><span class="info-box-icon-os-edges bg-red-gradient"><i class="fa fa-exclamation" aria-hidden="true"></i></span></a>
+                            </div>
+                            <div class="inline-block">
+                                <p class="text-center">ყველაფერი ანდროიდზე</p>
+                                <a href="/smartphones/android"><span class="info-box-icon-os bg-green-gradient"><i class="fa fa-android" aria-hidden="true"></i></span></a>
+                            </div>
+                            <div class="inline-block">
+                                <p class="text-center">ყველაფერი აიფოუნზე</p>
+                                <a href="#"><span class="info-box-icon-os bg-black-gradient"><i class="fa fa-apple" aria-hidden="true"></i></span></a>
+                            </div>
+                            <div class="inline-block info-box-last">
+                                <p class="text-center">აპების მიმოხილვა</p>
+                                <a href="#"><span class="info-box-icon-os-edges bg-yellow-gradient"><i class="fa fa-gamepad" aria-hidden="true"></i></span></a>
 
 
-                         </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div> <!-- END main information -->
+            </div> <!-- END main information -->
 
 
 
 
-     <!--All Feeds row-->
-    <div class="row">
+            <!--All Feeds row-->
+            <div class="row">
                 <!--Blog feed-->
                 <div class="col-md-8">
                     <div class="box box-purple">
@@ -123,7 +123,7 @@
                                 <% for(i = 0; i < x; i++) { %>
                                 <li class="item">
                                     <div class="blog-image">
-                                        <img src="./dist/static_images/placeholder.jpg" alt="">
+                                        <img src="../dist/static_images/placeholder.jpg" alt="">
                                     </div>
                                     <div class="blog-info">
                                         <a href="#" class="blog-title">ახალი ამბავი</a>
@@ -138,7 +138,7 @@
                                 <% } %>
                             </ul>
                             <div class="box-footer text-center">
-                          <!--             PAGINATION             -->
+                                <!--             PAGINATION             -->
                                 <nav aria-label="Page navigation">
                                     <ul class="pagination">
                                         <li>
@@ -218,7 +218,7 @@
 
                 </div>
                 <!--Sidebar-->
-    </div>
+            </div>
             <!--END All Feeds row-->
 
         </section>
@@ -228,4 +228,4 @@
     <!-- /.content-wrapper -->
 
 
-<% include ./partials/footer %>
+<% include ../partials/footer %>
