--- a/codekeeper.ejs
+++ b/codekeeper.ejs
@@ -1,78 +1,28 @@
-<% include ./partials/header %>
-<div class="wrapper">
+<div class="row">
+    <!--main information -->
+    <div class="col-md-12">
+        <div class="box">
+            <h3 class="text-center main-info-header">ისწავლე სმარტფონი ჩვენთან ერთად <br><span id="loadLater">ვიდეო </span><span id="showLater2">ინსტრუქციებით</span> </h3>
+            <div class="div-center">
+                <div class="inline-block">
+                    <p class="text-center">აუცილებელი ინფო</p>
+                    <a href="#"><span class="info-box-icon-os-edges bg-red-gradient"><i class="fa fa-exclamation" aria-hidden="true"></i></span></a>
+                </div>
+                <div class="inline-block">
+                    <p class="text-center">ყველაფერი ანდროიდზე</p>
+                    <a href="/smartphones/android"><span class="info-box-icon-os bg-green-gradient"><i class="fa fa-android" aria-hidden="true"></i></span></a>
+                </div>
+                <div class="inline-block">
+                    <p class="text-center">ყველაფერი აიფოუნზე</p>
+                    <a href="#"><span class="info-box-icon-os bg-black-gradient"><i class="fa fa-apple" aria-hidden="true"></i></span></a>
+                </div>
+                <div class="inline-block info-box-last">
+                    <p class="text-center">აპების მიმოხილვა</p>
+                    <a href="#"><span class="info-box-icon-os-edges bg-yellow-gradient"><i class="fa fa-gamepad" aria-hidden="true"></i></span></a>
 
-    <!-- Main Header -->
-    <header class="main-header">
 
-        <!-- Logo -->
-        <a href="index2.html" class="logo">
-            <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><b>G</b>urus</span>
-            <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><b>GSM </b>Gurus</span>
-        </a>
-
-        <!-- Header Navbar -->
-        <nav class="navbar navbar-static-top" role="navigation">
-            <!-- Sidebar toggle button-->
-            <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-                <span class="sr-only">Toggle navigation</span>
-            </a>
-            <!-- Navbar Right Menu -->
-           
-        </nav>
-    </header>
-    <!-- Left side column. contains the logo and sidebar -->
-    <aside class="main-sidebar">
-
-        <!-- sidebar: style can be found in sidebar.less -->
-        <section class="sidebar">
-
-           
-
-            <!-- Sidebar Menu -->
-            <ul class="sidebar-menu">
-                <li class="header">Navigation Bar</li>
-                <!-- Optionally, you can add icons to the links -->
-                <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
-                <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
-                <li class="treeview">
-                    <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
-                        <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="#">Link in level 2</a></li>
-                        <li><a href="#">Link in level 2</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <!-- /.sidebar-menu -->
-        </section>
-        <!-- /.sidebar -->
-    </aside>
-
-    <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
-        <!-- Content Header (Page header) -->
-        <section class="content-header">
-            <h1>
-                Page Header
-                <small>Optional description</small>
-            </h1>
-        </section>
-
-        <!-- Main content -->
-        <section class="content">
-
-            <!-- Your Page Content Here -->
-            
-
-        </section>
-        <!-- /.content -->
+                </div>
+            </div>
+        </div>
     </div>
-    <!-- /.content-wrapper -->
-
-
-<% include ./partials/footer %>
+</div> <!-- END main information -->
