--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,9 +4,57 @@
     height: 180px;
 }
 
-.info-box-last {
+/* TOP NAVIGATION CSS */
+
+.my-info-box-icon {
+    /*border-top-left-radius: 10px;*/
+    /*border-top-right-radius: 0;*/
+    /*border-bottom-right-radius: 0;*/
+    /*border-bottom-left-radius: 10px;*/
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    border-radius: 40px;
+    display: block;
+    float: left;
+    height: 90px;
+    width: 90px;
+    text-align: center;
+    font-size: 45px;
+    line-height: 90px;
+    background: rgba(0, 0, 0, 0.2);
+}
+.my-info-box-icon:hover {
 
 }
+
+.my-info-box {
+    display: block;
+    min-height: 90px;
+    background: #fff;
+    width: 100%;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    border-top-left-radius: 40px;
+    border-bottom-left-radius: 40px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    margin-bottom: 15px;
+}
+
+.my-info-box-number {
+    display: block;
+    font-size: 14px;
+}
+.my-info-box-text {
+    display: block;
+    font-size: 14px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: bold;
+}
+
+
+/* TOP NAVIGATION CSS END */
 
 .inline-block {
     display: inline-block;
@@ -19,11 +67,9 @@
 }
 
 #loadLater {
-    display: none;
     color: #b40000;
 }
 #showLater2 {
-    display: none;
 }
 
 .must-know-container {
@@ -158,3 +204,5 @@
 .app-date {
     display: block;
 }
+
+
