--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,8 +16,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="../dist/css/AdminLTE.min.css">
- 
+    <!--w3schools css effects-->
+    <link rel="stylesheet" href="../dist/css/w3.css">
+    <!--Skin-->
     <link rel="stylesheet" href="../dist/css/skins/skin-purple.css">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
