--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -76,32 +76,53 @@
         <section class="content">
 
 <!-- =============================================  Your Page Content Here  ============================================== -->
+            <!--filter of videos-->
             <div class="row">
-                <!--main information -->
-                <div class="col-md-12">
-                    <div class="box">
-                        <h3 class="text-center main-info-header">ისწავლე სმარტფონი ჩვენთან ერთად <br><span id="loadLater">ვიდეო </span><span id="showLater2">ინსტრუქციებით</span> </h3>
-                        <div class="div-center">
-                            <div class="inline-block">
-                                <p class="text-center">აუცილებელი ინფო</p>
-                                <a href="#"><span class="info-box-icon-os-edges bg-red-gradient"><i class="fa fa-exclamation" aria-hidden="true"></i></span></a>
-                            </div>
-                            <div class="inline-block">
-                                <p class="text-center">ყველაფერი ანდროიდზე</p>
-                                <a href="/smartphones/android"><span class="info-box-icon-os bg-green-gradient"><i class="fa fa-android" aria-hidden="true"></i></span></a>
-                            </div>
-                            <div class="inline-block">
-                                <p class="text-center">ყველაფერი აიფოუნზე</p>
-                                <a href="#"><span class="info-box-icon-os bg-black-gradient"><i class="fa fa-apple" aria-hidden="true"></i></span></a>
-                            </div>
-                            <div class="inline-block info-box-last">
-                                <p class="text-center">აპების მიმოხილვა</p>
-                                <a href="#"><span class="info-box-icon-os-edges bg-yellow-gradient"><i class="fa fa-gamepad" aria-hidden="true"></i></span></a>
-                            </div>
+
+                <h3 class="text-center main-info-header">ისწავლე სმარტფონი ჩვენთან ერთად <br>
+                    <span id="loadLater" class="w3-animate-left">ვიდეო </span><span class="w3-animate-right" id="showLater2">ინსტრუქციებით</span> </h3>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="my-info-box">
+                        <span class="my-info-box-icon bg-red-gradient"><i class="fa fa-exclamation"></i></span>
+                        <div class="info-box-content">
+                            <span class="my-info-box-text">აუცილებელი ინფო</span>
+                            <span class="my-info-box-number">ზოგადი ინფო ორივე სისტემაზე</span>
                         </div>
                     </div>
                 </div>
-            </div> <!-- END main information -->
+
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="my-info-box">
+                        <span class="my-info-box-icon bg-green-gradient"><i class="fa fa-android"></i></span>
+                        <div class="info-box-content">
+                            <span class="my-info-box-text">ანდროიდი</span>
+                            <span class="my-info-box-number">ვიდეოები ბრენდების მიხედვით</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="my-info-box">
+                        <span class="my-info-box-icon bg-black-gradient"><i class="fa fa-apple"></i></span>
+                        <div class="info-box-content">
+                            <span class="my-info-box-text">აიფონი</span>
+                            <span class="my-info-box-number">ვიდეოები iOS-ის შესწავლაზე</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="my-info-box">
+                        <span class="my-info-box-icon bg-yellow-gradient"><i class="fa fa-gamepad"></i></span>
+                        <div class="info-box-content">
+                            <span class="my-info-box-text">აპების მიმოხილვა</span>
+                            <span class="my-info-box-number">საინტერესო აპების გაცნობა და გამოყენება</span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <!--filter of videos END-->
 
 
 
