--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -33,15 +33,15 @@
             <ul class="sidebar-menu">
                 <li class="header">Navigation Bar</li>
                 <!-- Optionally, you can add icons to the links -->
-                <li class="active"><a href="#"><i class="fa fa-home" id="sidebar-icon" aria-hidden="true"></i> <span>საწყისი გვერდი</span></a></li>
+                <li class="active"><a href="/"><i class="fa fa-home" id="sidebar-icon" aria-hidden="true"></i> <span>საწყისი გვერდი</span></a></li>
                 <li><a href="#"><i class="fa fa-newspaper-o" id="sidebar-icon-news" aria-hidden="true"></i><span>სიახლეები</span></a></li>
                 <li class="treeview">
-                    <a href="#"><i class="fa fa-android" id="sidebar-icon" aria-hidden="true"></i> <span>Android</span>
+                    <a href="/smartphone/android"><i class="fa fa-android" id="sidebar-icon" aria-hidden="true"></i> <span>Android</span>
                         <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i></span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="#">ინსტრუქციები</a></li>
+                        <li><a href="/smartphone/android">ინსტრუქციები</a></li>
                         <li><a href="#">აპლიკაციები</a></li>
                         <li><a href="#">სიახლე სისტემაზე</a></li>
                     </ul>
@@ -82,6 +82,7 @@
                 <h3 class="text-center main-info-header">ისწავლე სმარტფონი ჩვენთან ერთად <br>
                     <span id="loadLater" class="w3-animate-left">ვიდეო </span><span class="w3-animate-right" id="showLater2">ინსტრუქციებით</span> </h3>
                 <div class="col-md-3 col-sm-6 col-xs-12">
+                    <a href="#">
                     <div class="my-info-box">
                         <span class="my-info-box-icon bg-red-gradient"><i class="fa fa-exclamation"></i></span>
                         <div class="info-box-content">
@@ -89,9 +90,12 @@
                             <span class="my-info-box-number">ზოგადი ინფო ორივე სისტემაზე</span>
                         </div>
                     </div>
+                    </a>
                 </div>
-
+                
+                
                 <div class="col-md-3 col-sm-6 col-xs-12">
+                    <a href="/smartphones/android">
                     <div class="my-info-box">
                         <span class="my-info-box-icon bg-green-gradient"><i class="fa fa-android"></i></span>
                         <div class="info-box-content">
@@ -99,9 +103,12 @@
                             <span class="my-info-box-number">ვიდეოები ბრენდების მიხედვით</span>
                         </div>
                     </div>
+                     </a>
                 </div>
+               
 
                 <div class="col-md-3 col-sm-6 col-xs-12">
+                    <a href="#">
                     <div class="my-info-box">
                         <span class="my-info-box-icon bg-black-gradient"><i class="fa fa-apple"></i></span>
                         <div class="info-box-content">
@@ -109,9 +116,12 @@
                             <span class="my-info-box-number">ვიდეოები iOS-ის შესწავლაზე</span>
                         </div>
                     </div>
+                    </a>
                 </div>
-
+              
+                
                 <div class="col-md-3 col-sm-6 col-xs-12">
+                    <a href="#">
                     <div class="my-info-box">
                         <span class="my-info-box-icon bg-yellow-gradient"><i class="fa fa-gamepad"></i></span>
                         <div class="info-box-content">
@@ -119,8 +129,9 @@
                             <span class="my-info-box-number">საინტერესო აპების გაცნობა და გამოყენება</span>
                         </div>
                     </div>
+                    </a>
                 </div>
-
+                
             </div>
             <!--filter of videos END-->
 
@@ -188,7 +199,7 @@
                 <div class="col-md-4">
                     <div class="box box-purple">
                         <div class="box-header with-border">
-                            <p class="box-title">აუცილებლად უნდა ვიცოდეთ<p>
+                            <p class="box-title">ახალი ინსტრუქციები<p>
                         </div>
                         <div class="box-body">
                             <ul class="products-list product-list-in-box">
@@ -199,7 +210,7 @@
                                         <img src="/dist/static_images/default-50x50.gif">
                                     </div>
                                     <div class="product-info">
-                                        <a href="#" class="product-title">დავრეგისტრირდეთ Play Market-ზე</a>
+                                        <a href="#" class="newb-title">დავრეგისტრირდეთ Play Market-ზე</a>
                                         <span class="product-description">
                                             თავად ტკივილი არავის უყვარს, არავინ ეძებს მას და არავის სურს იგი, უბრალოდ იმიტომ, რომ ის ტკივილია...
                                         </span>
