--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,8 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.6 -->
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+    <!--Georgian font dejavu web-fonts.ge-->
+    <link rel="stylesheet" href="../dist/georgian_fonts/css/dejavu-sans.min.css">
     <!--My own css-->
     <link rel="stylesheet" href="../stylesheets/main.css">
     <!-- Font Awesome -->
