--- a/views/android/android.ejs
+++ b/views/android/android.ejs
@@ -80,7 +80,7 @@
             <div class="row">
 
                 <h3 class="text-center main-info-header">ისწავლე სმარტფონი ჩვენთან ერთად <br>
-                    <span id="loadLater" class="w3-animate-left">ვიდეო </span><span class="w3-animate-right" id="showLater2">ინსტრუქციებით</span> </h3>
+                    <span id="loadLater" >ვიდეო </span><span id="showLater2">ინსტრუქციებით</span> </h3>
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="my-info-box">
                         <span class="my-info-box-icon bg-red-gradient"><i class="fa fa-exclamation"></i></span>
@@ -135,11 +135,14 @@
                             <h3 class="box-title text-center">აირჩიეთ ბრენდი</h3>
                         </div>
                         <div class="box-body">
-                            
-                        <div class="devices-tab">
-                            
-                        </div>
-                            
+
+                            <% x = 10 %>
+                            <% for(i = 0; i < x; i++){ %>
+                            <div class="col-md-3 col-sm-6">
+                                <div class="white-boxes"></div>
+                            </div>
+                            <% } %>
+
                             <div class="box-footer text-center">
                               
                             </div>
