--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -8,9 +8,9 @@
         <!-- Logo -->
         <a href="/" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><b>G</b>urus</span>
+            <span class="logo-mini"><b>G</b>uru</span>
             <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><b>GSM </b>Gurus</span>
+            <span class="logo-lg"><b>GSM </b>Guru</span>
         </a>
 
         <!-- Header Navbar -->
@@ -162,6 +162,7 @@
                                             Suspendisse sapien ante, auctor congue maximus vel, fermentum nec eros. Maecenas
                                             at tellus non justo consequat suscipit. Nulla cursus est vel nibh vestibulum, rhoncus
                                             Praesent maximus in velit ac congue. Morbi non dictum
+                                            <span class="app-date"><em id="font-size">Date: 27.11.2017</em></span>
                                         </span>
                                     </div>
                                     <a href="#" class="greenBtn">მეტი</a>
@@ -211,7 +212,7 @@
                                     </div>
                                     <div class="product-info">
                                         <a href="#" class="newb-title">დავრეგისტრირდეთ Play Market-ზე</a>
-                                        <span class="product-description">
+                                        <span class="newb-desc">
                                             თავად ტკივილი არავის უყვარს, არავინ ეძებს მას და არავის სურს იგი, უბრალოდ იმიტომ, რომ ის ტკივილია...
                                         </span>
                                     </div>
