--- a/views/android/android.ejs
+++ b/views/android/android.ejs
@@ -8,9 +8,9 @@
         <!-- Logo -->
         <a href="/" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><b>G</b>urus</span>
+            <span class="logo-mini"><b>G</b>uru</span>
             <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><b>GSM </b>Gurus</span>
+            <span class="logo-lg"><b>GSM </b>Guru</span>
         </a>
 
         <!-- Header Navbar -->
@@ -132,20 +132,47 @@
                 <div class="col-md-8">
                     <div class="box box-green">
                         <div class="box-header with-border">
-                            <h3 class="box-title text-center">აირჩიეთ ბრენდი</h3>
+                            <h3 class="box-title text-center">ანდროიდის სახელმძღვანელოები</h3>
                         </div>
                         <div class="box-body">
 
                             <% x = 10 %>
                             <% for(i = 0; i < x; i++){ %>
-                            <div class="col-md-3 col-sm-6">
-                                <div class="white-boxes"></div>
+                            <div class="col-md-4 col-sm-5">
+                                <div class="video-box">
+                                    <div class="video-box-image">
+                                        <a><img src="http://media.tvmovieshow.com/images/196x110/2000-hera-pheri-akshay-kumar.jpg" alt="title of post"></a>
+                                    </div>
+                                    <div class="video-box-title">
+                                        <a>ბლაბალბა ბლაბა ბლბალბალბალბაc,zmc.,zmc,.xzmc,.zmc,.mxz,cm.xzcz</a>
+                                    </div>
+                                    <div class="video-box-desc">
+                                        <em class="pull-right">date: 14.03.2017</em>
+                                    </div>
+                                </div>
                             </div>
                             <% } %>
-
-                            <div class="box-footer text-center">
-                              
                             </div>
+                        <div class=" box-footer text-center">
+                            <nav aria-label="Page navigation">
+                                <ul class="pagination">
+                                    <li>
+                                        <a href="#" aria-label="Previous">
+                                            <span aria-hidden="true">&laquo;</span>
+                                        </a>
+                                    </li>
+                                    <li><a href="#">1</a></li>
+                                    <li><a href="#">2</a></li>
+                                    <li><a href="#">3</a></li>
+                                    <li><a href="#">4</a></li>
+                                    <li><a href="#">5</a></li>
+                                    <li>
+                                        <a href="#" aria-label="Next">
+                                            <span aria-hidden="true">&raquo;</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav><!--PAGINATION END-->
                         </div>
                     </div>
                 </div>
@@ -167,7 +194,7 @@
                                     </div>
                                     <div class="product-info">
                                         <a href="#" class="newb-title">დავრეგისტრირდეთ Play Market-ზე</a>
-                                        <span class="product-description">
+                                        <span class="newb-desc">
                                             თავად ტკივილი არავის უყვარს, არავინ ეძებს მას და არავის სურს იგი, უბრალოდ იმიტომ, რომ ის ტკივილია...
                                         </span>
                                     </div>
