--- a/views/android/android.ejs
+++ b/views/android/android.ejs
@@ -85,7 +85,7 @@
                     <div class="my-info-box">
                         <span class="my-info-box-icon bg-red-gradient"><i class="fa fa-exclamation"></i></span>
                         <div class="info-box-content">
-                            <span class="my-info-box-text">აუცილებელი ინფო</span>
+                            <span class="my-info-box-text">საჭირო ინფო</span>
                             <span class="my-info-box-number">ზოგადი ინფო ორივე სისტემაზე</span>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
             <!--All Feeds row-->
             <div class="row">
                 <!--Blog feed-->
-                <div class="col-md-8">
+                <div class="col-md-9">
                     <div class="box box-green">
                         <div class="box-header with-border">
                             <h3 class="box-title text-center">ანდროიდის სახელმძღვანელოები</h3>
@@ -179,7 +179,7 @@
                 <!--END Blog Feed-->
 
                 <!--Sidebar-->
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="box box-green">
                         <div class="box-header with-border">
                             <p class="box-title">ახალი ინსტრუქციები<p>
