--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -6,11 +6,11 @@
     <p class="login-box-msg">Sign in Form</p>
     <form action="/landing/login" method="POST">
         <div class="form-group has-feedback">
-            <input name="user[username]" type="email" class="form-control" placeholder="Email">
+            <input name="username" type="email" class="form-control" placeholder="Email">
             <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
         </div>
         <div class="form-group has-feedback">
-            <input name="user[password]" type="password" class="form-control" placeholder="Password">
+            <input name="password" type="password" class="form-control" placeholder="Password">
             <span class="glyphicon glyphicon-lock form-control-feedback"></span>
         </div>
         <div class="row">
